--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/education.css">
     <link rel="stylesheet" href="style/skills.css">
     <link rel="stylesheet" href="style/contact.css">
+    <link rel="stylesheet" href="style/hobby.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
 
@@ -22,6 +23,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -116,6 +118,42 @@
                 <figcaption>Raspberry Pi</figcaption>
             </figure>
         </div>
+    </div>
+
+
+    <!--     HOBBIES     -->
+    <div id="hobbies">
+        <h1>My happy avocations</h1>
+        <div class="hobgrid">
+            <div class="hob1">
+                <div class="hob-left">
+                    <img src="style/images/piano.jpg">
+                </div>
+                <div class="hob-right">
+                    Pressing these keys has always helped me to disconnect from this busy world and enjoy some self time
+                </div>
+            </div>
+
+            <div class="hob1">
+                <div class="hob-left">
+                    <img src="style/images/tennis.jpg">
+                </div>
+                <div class="hob-right">
+                    Playing sports like Tennis, Badminton and even hitting the gym once in a while gives me the energy to do all the tolling tasks
+                </div>
+            </div>
+
+            <div class="hob1">
+                <div class="hob-left">
+                    <img src="style/images/art.jpg">
+                </div>
+                <div class="hob-right">
+                    The peace of mind that I attain by randomly doing paint strokes on a canvas and coming with my own masterpiece is just awesome
+                </div>
+            </div>
+      
+        </div>
+
     </div>
 
     <!--     CONTACT     -->
