--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                     <img src="style/images/tennis.jpg">
                 </div>
                 <div class="hob-right">
-                    Playing sports like Tennis, Badminton and even hitting the gym once in a while gives me the energy to do all the tolling tasks
+                    Playing sports like Tennis, Badminton and even hitting the gym once in a while gives me the energy
+                    to do all the tolling tasks
                 </div>
             </div>
 
@@ -148,10 +149,11 @@
                     <img src="style/images/art.jpg">
                 </div>
                 <div class="hob-right">
-                    The peace of mind that I attain by randomly doing paint strokes on a canvas and coming with my own masterpiece is just awesome
+                    The peace of mind that I attain by randomly doing paint strokes on a canvas and coming with my own
+                    masterpiece is just awesome
                 </div>
             </div>
-      
+
         </div>
 
     </div>
